test/should_pass/any.erl
-module(any).

-compile([export_all]).

-spec any(any()) -> any().

any(1) ->
    apa.
